--- a/test-output/old/Ecom Test Suite/methods-not-run.html
+++ b/test-output/old/Ecom Test Suite/methods-not-run.html
@@ -1,5 +1,6 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>com.tests.EcommerceTests.testAddProductToCart</td></tr>
+<tr><td>com.tests.EcommerceTests.testRemoveProductFromCart</td></tr>
 <tr><td>com.tests.EcommerceTests.testSearchNonExistingProduct</td></tr>
 <tr><td>com.tests.EcommerceTests.testSearchExistingProduct</td></tr>
 </table>
