--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Ecom_Test_Suite" class="navigator-link ">
-                    <span>F:\SANTOSH\Eclipse-Program\Ecom-Automation-Analyst\src\test\resources\testng.xml</span>
+                    <span>F:\SANTOSH\Eclipse-Program\Ecom-Automation-Analyst\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">2 methods, 2 failed,   </span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -101,6 +101,11 @@
                       <a href="#" panel-name="suite-Ecom_Test_Suite" class="show-methods failed suite-Ecom_Test_Suite"> (show)</a> <!-- show-methods failed suite-Ecom_Test_Suite -->
                     </span>
                     <div class="method-list-content failed suite-Ecom_Test_Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Ecom_Test_Suite" title="com.tests.EcommerceTests" class="method navigator-link" hash-for-method="testRemoveProductFromCart">testRemoveProductFromCart</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="failed.png" width="3%"/>
                         <a href="#" panel-name="suite-Ecom_Test_Suite" title="com.tests.EcommerceTests" class="method navigator-link" hash-for-method="testUpdateProductQuantityInCart">testUpdateProductQuantityInCart</a> <!-- method navigator-link -->
@@ -126,15 +131,38 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="testRemoveProductFromCart">
+                  </a> <!-- testRemoveProductFromCart -->
+                  <span class="method-name">testRemoveProductFromCart</span>
+                  <div class="stack-trace">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for visibility of element located by By.xpath: //input[@value=&apos;Delete&apos;] (tried for 30 second(s) with 500 milliseconds interval)
+Build info: version: &apos;4.22.0&apos;, revision: &apos;c5f3146703*&apos;
+System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;19.0.1&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 127.0.6533.100, chrome: {chromedriverVersion: 127.0.6533.99 (f31af5097d90..., userDataDir: C:\Users\Panchal\AppData\Lo...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:58641}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:58641/devtoo..., se:cdpVersion: 127.0.6533.100, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 183922ba2fa4eb574ce197770cd6d428
+	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
+	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:228)
+	at com.pages.CartPage.removeProductFromCart(CartPage.java:64)
+	at com.tests.EcommerceTests.testRemoveProductFromCart(EcommerceTests.java:71)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 25 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="testUpdateProductQuantityInCart">
                   </a> <!-- testUpdateProductQuantityInCart -->
                   <span class="method-name">testUpdateProductQuantityInCart</span>
-                  <div class="stack-trace">org.openqa.selenium.support.ui.UnexpectedTagNameException: Element should have been &quot;select&quot; but was &quot;span&quot;
+                  <div class="stack-trace">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for visibility of element located by By.xpath: //select[@class=&apos;a-native-dropdown a-declarative sc-update-quantity-select&apos;] (tried for 30 second(s) with 500 milliseconds interval)
 Build info: version: &apos;4.22.0&apos;, revision: &apos;c5f3146703*&apos;
 System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;19.0.1&apos;
-Driver info: driver.version: unknown
-	at org.openqa.selenium.support.ui.Select.&lt;init&gt;(Select.java:46)
-	at com.pages.CartPage.getProductQuantity(CartPage.java:51)
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 127.0.6533.100, chrome: {chromedriverVersion: 127.0.6533.99 (f31af5097d90..., userDataDir: C:\Users\Panchal\AppData\Lo...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:58748}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:58748/devtoo..., se:cdpVersion: 127.0.6533.100, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 48354bca5de4bd4e4e2fbba9b994bd6f
+	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
+	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:228)
+	at com.pages.CartPage.updateProductQuantity(CartPage.java:37)
 	at com.tests.EcommerceTests.testUpdateProductQuantityInCart(EcommerceTests.java:55)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
 ... Removed 25 stack frames
@@ -146,7 +174,7 @@ Driver info: driver.version: unknown
         </div> <!-- panel Ecom_Test_Suite -->
         <div panel-name="test-xml-Ecom_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">F:\SANTOSH\Eclipse-Program\Ecom-Automation-Analyst\src\test\resources\testng.xml</span>
+            <span class="header-content">F:\SANTOSH\Eclipse-Program\Ecom-Automation-Analyst\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -195,16 +223,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testUpdateProductQuantityInCart')
 data.setCell(0, 2, 'com.tests.EcommerceTests')
-data.setCell(0, 3, 7039);
+data.setCell(0, 3, 35999);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'testRemoveProductFromCart')
+data.setCell(1, 2, 'com.tests.EcommerceTests')
+data.setCell(1, 3, 35480);
 window.suiteTableData['Ecom_Test_Suite']= { tableData: data, tableDiv: 'times-div-Ecom_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Ecom_Test_Suite">
               </div> <!-- times-div-Ecom_Test_Suite -->
             </div> <!-- times-div -->
@@ -219,7 +251,7 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Ecom_Test_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">4 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
@@ -227,11 +259,9 @@ return data;
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">testAddProductToCart</span>
                 <br/>
-                <span class="ignored-method-name">testRemoveProductFromCart</span>
+                <span class="ignored-method-name">testSearchExistingProduct</span>
                 <br/>
                 <span class="ignored-method-name">testSearchNonExistingProduct</span>
-                <br/>
-                <span class="ignored-method-name">testSearchExistingProduct</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -251,12 +281,26 @@ return data;
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">testUpdateProductQuantityInCart</span>
-                <span class="method-start">6626 ms</span>
+                <span class="method-name">testRemoveProductFromCart</span>
+                <span class="method-start">6730 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">13680 ms</span>
+                <span class="method-start">42224 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">42770 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">testUpdateProductQuantityInCart</span>
+                <span class="method-start">47838 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">83849 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
