--- a/test-output/old/Ecom Test Suite/methods-alphabetical.html
+++ b/test-output/old/Ecom Test Suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Ecom Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="86bdd6">  <td>24/08/10 23:47:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.tests.EcommerceTests@7d4f9aae]">&gt;&gt;setup</td> 
+<tr bgcolor="86bdd6">  <td>24/08/12 11:07:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.tests.EcommerceTests@72e5a8e]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>24/08/10 23:47:33</td>   <td>13673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.EcommerceTests@7d4f9aae]">&lt;&lt;tearDown</td> 
+<tr bgcolor="86bdd6">  <td>24/08/12 11:07:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.tests.EcommerceTests@72e5a8e]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
-<tr bgcolor="92dae4">  <td>24/08/10 23:47:26</td>   <td>6619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTests.testUpdateProductQuantityInCart()[pri:0, instance:com.tests.EcommerceTests@7d4f9aae]">testUpdateProductQuantityInCart</td> 
+<tr bgcolor="86bdd6">  <td>24/08/12 11:07:57</td>   <td>41080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.EcommerceTests@72e5a8e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
+<tr bgcolor="86bdd6">  <td>24/08/12 11:07:57</td>   <td>41080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.EcommerceTests@72e5a8e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>24/08/12 11:06:40</td>   <td>-36041</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTests.testRemoveProductFromCart()[pri:0, instance:com.tests.EcommerceTests@72e5a8e]">testRemoveProductFromCart</td> 
+  <td>main@125130493</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>24/08/12 11:07:21</td>   <td>5067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommerceTests.testUpdateProductQuantityInCart()[pri:0, instance:com.tests.EcommerceTests@72e5a8e]">testUpdateProductQuantityInCart</td> 
   <td>main@125130493</td>   <td></td> </tr>
 </table>
